k8s/apps/network/mailserver/autodiscover-svc.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: autodiscover-mailserver
  namespace: mailserver
  labels:
    app.kubernetes.io/name: autodiscover-email-settings
    app.kubernetes.io/instance: autodiscover-email-settings
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: autodiscover-email-settings
    app.kubernetes.io/instance: autodiscover-email-settings
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
