k8s/apps/network/mailserver/svc.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailserver
  namespace: mailserver
  labels:
    app.kubernetes.io/name: mailserver
    app.kubernetes.io/instance: mailserver
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mailserver
    app.kubernetes.io/instance: mailserver
  ports:
    # Transfer
    - name: transfer
      port: 25
      targetPort: transfer
    # ESMTP with implicit TLS
    - name: esmtp-implicit
      port: 465
      targetPort: esmtp-implicit
    # ESMTP with explicit TLS (STARTTLS)
    - name: esmtp-explicit
      port: 587
      targetPort: esmtp-explicit
    # IMAPS with implicit TLS
    - name: imap-implicit
      port: 993
      targetPort: imap-implicit
    - name: rspamd
      port: 11334
      targetPort: rspamd
---
apiVersion: v1
kind: Service
metadata:
  name: autodiscover-mailserver
  namespace: mailserver
  labels:
    app.kubernetes.io/name: autodiscover-email-settings
    app.kubernetes.io/instance: autodiscover-email-settings
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: autodiscover-email-settings
    app.kubernetes.io/instance: autodiscover-email-settings
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
