k8s/apps/network/mailserver/autodiscover-ingress.k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: autodiscover-mailserver
  namespace: mailserver
  labels:
    app.kubernetes.io/name: autodiscover-email-settings
    app.kubernetes.io/instance: autodiscover-email-settings
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: ingress-external-traefik
  rules:
    - host: autodiscover.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: autodiscover-mailserver
                port:
                  name: http
    - host: autoconfig.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: autodiscover-mailserver
                port:
                  name: http
